# pOCR

./: .gitignore  AppIcon.icns  CHANGELOG.md  Makefile  README.md  README.zh.md  pyproject.toml
.github/workflows/: build-release.yml
Resources/: ocr_api.py  ocr_local.py
Sources/: CredentialsManager.swift  HotKeyManager.swift  KeychainManager.swift  Logger.swift  OCRService.swift  SettingsView.swift  StatusBarController.swift  pOCRApp.swift
scripts/: gen_icons.py  run_paddleocr.sh
tests/: test_providers_integration.py
